// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fontSynthesisWeight renders 0 1`] = `
Array [
  .c0 {
  font-synthesis-weight: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-weight: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-weight: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-weight: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`fontSynthesisWeight renders function 1`] = `
Array [
  .c0 {
  font-synthesis-weight: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-weight: has;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-weight: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-weight: has;
}

<div
    className="c0"
  />,
]
`;

exports[`fontSynthesisWeight renders invalid theme path 1`] = `
Array [
  .c0 {
  font-synthesis-weight: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-weight: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-weight: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-weight: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`fontSynthesisWeight renders negative number 1`] = `
Array [
  .c0 {
  font-synthesis-weight: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-weight: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-weight: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-weight: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontSynthesisWeight renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    font-synthesis-weight: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis-weight: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis-weight: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-synthesis-weight: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    font-synthesis-weight: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis-weight: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis-weight: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-synthesis-weight: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis-weight: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis-weight: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis-weight: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-synthesis-weight: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis-weight: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis-weight: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis-weight: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-synthesis-weight: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontSynthesisWeight renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    font-synthesis-weight: July;
  }
}

@media April {
  .c0 {
    font-synthesis-weight: August;
  }
}

@media January {
  .c0 {
    font-synthesis-weight: September;
  }
}

@media April {
  .c0 {
    font-synthesis-weight: November;
  }
}

@media June {
  .c0 {
    font-synthesis-weight: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    font-synthesis-weight: July;
  }
}

@media April {
  .c0 {
    font-synthesis-weight: August;
  }
}

@media January {
  .c0 {
    font-synthesis-weight: September;
  }
}

@media April {
  .c0 {
    font-synthesis-weight: November;
  }
}

@media June {
  .c0 {
    font-synthesis-weight: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-synthesis-weight: January;
  }
}

@media April {
  .c0 {
    font-synthesis-weight: December;
  }
}

@media January {
  .c0 {
    font-synthesis-weight: April;
  }
}

@media April {
  .c0 {
    font-synthesis-weight: May;
  }
}

@media June {
  .c0 {
    font-synthesis-weight: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-synthesis-weight: January;
  }
}

@media April {
  .c0 {
    font-synthesis-weight: December;
  }
}

@media January {
  .c0 {
    font-synthesis-weight: April;
  }
}

@media April {
  .c0 {
    font-synthesis-weight: May;
  }
}

@media June {
  .c0 {
    font-synthesis-weight: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontSynthesisWeight renders postitive number 1`] = `
Array [
  .c0 {
  font-synthesis-weight: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-weight: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-weight: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-weight: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontSynthesisWeight renders string 1`] = `
Array [
  .c0 {
  font-synthesis-weight: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-weight: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-weight: June;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-weight: June;
}

<div
    className="c0"
  />,
]
`;

exports[`fontSynthesisWeight renders valid theme path 1`] = `
Array [
  .c0 {
  font-synthesis-weight: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-weight: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-weight: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis-weight: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
